# doxybook2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: wheels.yml
src/: DoxybookBinding.cpp  DoxybookBinding.hpp
src/doxybook2/: __init__.py  __main__.py  _doxybook2.pyx
src/shim/include/fmt/: format.h
src/shim/include/spdlog/: spdlog.h
